...
              child: Form(
                key: formKey,
                autovalidateMode: AutovalidateMode.always,
                child: Column(
                  children: <Widget>[
                    TextFormField(
                      key: Key("usernameFormField"),
                      decoration: InputDecoration(
                          border: OutlineInputBorder(), labelText: "Username"),
                      validator: RequiredValidator(errorText: "Required"),
                      onSaved: (String value) {
                        this.user.username = value;
                      },
                    ),
                    Padding(
                      padding: EdgeInsets.only(
                        top: 20.0,
                      ),
                      child: TextFormField(
                          key: Key("passwordFormField"),
                          decoration: InputDecoration(
                            border: OutlineInputBorder(),
                            labelText: "Password",
                          ),
                          validator: RequiredValidator(errorText: "Required"),
                          onSaved: (String value) {
...
